# daily-todos

./: .gitignore  MULTIPLATFORM_BUILD.md  README.md  REQUIREMENTS.md  generate-icons.js  index.html  package-lock.json  package.json  vite.config.ts  wallpaper.html
.github/workflows/: build-desktop.yml  ci.yml  release.yml
src/: App.css  App.tsx  Wallpaper.css  Wallpaper.tsx  logging.ts  main.tsx  styles.css  timeRanges.ts  todoUtils.ts  types.ts  wallpaper-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Calendar.css  Calendar.tsx  Header.css  Header.tsx  TodoList.css  TodoList.tsx
