[package]
name = "daily-todo-app"
version = "0.0.3"
description = "轻量级程序员每日待办软件"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [], default-features = false }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.0"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
